mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/storageLayoutSpecifier/type_uint_max.sol
contract at layout at type(uint).max { }
// ----
// TypeError 1505: (22-36): The base slot expression contains elements that are not yet supported by the internal constant evaluator and therefore cannot be evaluated at compilation time.
